@@ -1,8 +1,14 @@
 2003-01-25  Vino Crescini  <jcrescin@cit.uws.ued.au>
+	* common/vlad.h :
+
+	  - Added a new error code for unique-item lists.
 
 	* common/list.cpp :
 	* common/list.h :
 	* kb/symtab.cpp :
+
+	  - Added a flag to the list to identify whether it should allow
+	    identical items to be added or not. Symtab is set to unique.
 
 	  - Added provisions to allow retrieval of identical items from
 	    the list. Matching nodes are passed through an array.
